src/components/Login/login.scss
.bg{
  background-color: #01bdd6;
  min-height: 100vh;
  overflow: auto;
}
.card{
  background-color: #fff;
  width: 90%;
  margin: 50px auto;
  border-radius: 3px;
  padding: 10px;
  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.3);
  max-width: 330px;
}
.login{
  margin: 0 auto;
  margin-top: 10px;
}
.login__form{
  background-color: #fff;
  padding: 20px 15px;
  margin-top: 10px;
  text-align: left;
}
.inputWrapper{
  div:nth-child(2) {
    width: 250px !important;
  }
  div:nth-child(5) {
    width: 250px !important;
  }
  label {
    transition: transform 200ms 0ms;
  }
}
.floatingLabelFocusStyle{
  color: #000 !important;
}
.icon{
  display: inline-block;
  bottom: -13px;
  position: relative;
  span{
    margin: 0 10px 0 0;
    font-size: 32px !important;
    bottom: -10px;
  }
}
.logo{
  width: 222px;
}
.buttonWrapper{
  a {
    text-decoration: none;
  }
}
.button{
  color: white !important;
  display: block !important;
  width: 100%;
  margin: 37px 0;
  background-color: #9202d3 !important;
}
.forgotten {
  color: #01bdd6;
  font-weight: bolder;
  text-decoration: none;
}

